--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
+.settings
+.project
+.classpath
