--- a/spring-boot-jsp-jpa/src/main/resources/application.properties
+++ b/spring-boot-jsp-jpa/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.view.suffix: .jsp
 spring.jpa.hibernate.ddl-auto:update
 spring.jpa.show-sql: true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/utfpr
+spring.datasource.url=jdbc:postgresql://localhost:5432/utfpr_web
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
