--- a/spring-boot-jsp-jpa/src/main/resources/application.properties
+++ b/spring-boot-jsp-jpa/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.view.prefix: /WEB-INF/jsp/
-spring.view.suffix: .jsp
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
 spring.jpa.hibernate.ddl-auto:update
 spring.jpa.show-sql: true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
