--- a/spring-mvc/pom.xml
+++ b/spring-mvc/pom.xml
@@ -62,6 +62,13 @@
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
 		<!-- -->
+
+		<!-- Validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -86,6 +93,13 @@
 						<version>1.2.5.RELEASE</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
