--- a/spring-mvc/src/main/resources/application.properties
+++ b/spring-mvc/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 #Configuração para JSP com template de view
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
-
 spring.jpa.hibernate.ddl-auto:update
 spring.jpa.show-sql: true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -9,3 +8,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/utfpr_web
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
+
+# HTTP encoding (HttpEncodingProperties)
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
