--- a/spring-mvc/src/test/resources/application.properties
+++ b/spring-mvc/src/test/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.suffix: .jsp
 spring.jpa.hibernate.ddl-auto:update
 spring.jpa.show-sql: true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/utfpr_web
+spring.datasource.url=jdbc:postgresql://localhost:5432/utfpr_test
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -13,16 +13,3 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
-
-# Senha do spring-security em memoria
-security.user.name=admin
-security.user.password=admin
-security.user.role=admin
-
-
-
-
-
-
-
-
