--- a/spring-mvc/pom.xml
+++ b/spring-mvc/pom.xml
@@ -100,7 +100,11 @@
 		    <artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 		
-
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-test</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
